--- a/Node/package.json
+++ b/Node/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "ddp": "^0.12.1",
     "express": "^4.16.4",
     "jsxapi": "^4.2.0",
