--- a/Node/package.json
+++ b/Node/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "jsxapi": "^4.2.0",
     "moment-timezone": "^0.5.23",
+    "mqtt": "^2.18.8",
     "sha256": "^0.2.0"
   }
 }
