--- a/Java/Norway/src/main/resources/application.properties
+++ b/Java/Norway/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port = 8092
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ciscohack?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.tomcat.max-active=5
